[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
claim = "0.5"
config = "0.11"
once_cell = "1"
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1", features = ["derive"]}
serde-aux = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"]}
tracing = { version = "0.1", features = ["log"] }
tracing-actix-web = "0.5"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
unicode-segmentation = "1"
uuid = { version = "0.8.1", features = ["v4"] }
validator = "0.14"

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
    "macros",
    "migrate",
    "offline",
    "postgres",
    "runtime-actix-rustls",
    "uuid",
]

[dev-dependencies]
fake = "~2.3"  # pinned b/c it relies on rand 0.8, which is not yet used by quickcheck
reqwest = "0.11"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"